fix w3c compliance errors and align article(s) a little more to the screenshots

--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,5 +1,5 @@
 body {
     padding:0;
     margin:0;
-    height:100%vh;
+    min-height:100vh;
 }
