--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -4,7 +4,7 @@ body {
     color: #484848;
     font-size: 14px;
     font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    min-height:100%vh;
+    min-height:100vh;
 }
 .container {
     max-width: 1000px;
